increase sidebar  90% width on mobile

--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -101,7 +101,7 @@
 	z-index: 200;
 	padding-top: 15px;
 	padding-bottom: 15px;
-	width: 300px;
+	width: 90%;
 	overflow-y: scroll;
 	@include translatex(-100%);
 	@extend .duration;
