--- a/style.css
+++ b/style.css
@@ -2930,6 +2930,9 @@ article p:last-child {
 .woobuilder-active .site-content, .elementor-page .site-content, .edited-by-divi-builder .site-content, .elementor-template-full-width .site-content {
   margin: 0;
 }
+.site-content-boxed-container.elementor-template-full-width .site-content{
+  max-width: 100%;
+}
 .single-product .site-content {
   margin-top: 0;
 }
