--- a/assets/css/admin/general.scss
+++ b/assets/css/admin/general.scss
@@ -85,6 +85,7 @@ a {
 		&:before {
 			content: url( ../../../assets/images/logo.svg );
 			transform: rotate( -30deg );
+			filter: grayscale(90%);
 		}
 	}
 	.wp-menu-name{
