--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -837,10 +837,12 @@
 
 			// Terms and conditions
 			.woocommerce-terms-and-conditions-wrapper {
-				border-radius: 5px;
-				border: 1px solid #d9d9d9;
-				margin-top: 30px;
-				padding: 15px;
+				.form-row {
+					border-radius: 5px;
+					border: 1px solid #d9d9d9;
+					margin-top: 30px;
+					padding: 10px 15px;
+				}
 
 				.woocommerce-invalid-required-field {
 					color: red;
