# fix display pagination my account - order screen

--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -298,7 +298,9 @@
 }
 
 .infinite-scroll-active {
-	.woocommerce-pagination {
-		display: none;
+	&:not(.woocommerce-orders) {
+		.woocommerce-pagination {
+			display: none;
+		}
 	}
 }
