update style checkout layout 3

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1133,7 +1133,7 @@
 	}
 	&.has-distraction-free-checkout {
 		.site-content {
-			margin-top: 0;
+			margin-top: 3.5em;
 			@media (max-width: $screen-md - 1) {
 				margin: 0;
 			}
