--- a/inc/customizer/custom-controls/topbar-slider-data-items/style.css
+++ b/inc/customizer/custom-controls/topbar-slider-data-items/style.css
@@ -1,3 +1,33 @@
+.woostify-sortable-list-item-wrap .woostify-slider-list-item{
+	border-color: #ddd;
+    margin: 0;
+    padding: 0;
+    height: 35px;
+}
+.woostify-sortable-list-item-wrap .woostify-slider-list-item .dashicons{
+    height: 35px;
+    line-height: 35px;
+    width: 35px;
+    border-right: 1px solid #ddd;
+    font-size: 16px;
+}
+.woostify-sortable-list-item-wrap .woostify-slider-list-item .sortable-item-name{
+	font-weight: 500;
+}
+.woostify-sortable-list-item-wrap .slider-list-item-content{
+	box-shadow: none;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-top: none;
+    display: none;
+}
+.woostify-sortable-list-item-wrap .slider-list-item-content .woostify-slider-list-control{
+	padding: 10px;
+    position: relative;
+	display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 .woostify-slider-list-control.customize-control-textarea {
 	flex-direction: column;
     align-items: flex-start;
@@ -7,13 +37,13 @@
 	margin-bottom: 5px;
 }
 
-.adv-list-item-content .woostify-slider-list-control.customize-control-textarea .woostify-slider-list-input {
+.slider-list-item-content .woostify-slider-list-control.customize-control-textarea .woostify-slider-list-input {
 	max-width: 100%;
 }
 .woostify-sortable-list-item-wrap .woostify-slider-list-item .sortable-item-icon-del {
 	cursor: pointer;
 }
-.adv-list-add-item-btn.button {
+.slider-list-add-item-btn.button {
 	margin-top: 10px;
 }
 
