--- a/style.css
+++ b/style.css
@@ -6971,7 +6971,6 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
   position: relative;
   float: left;
   max-width: 100%;
-  opacity: 0;
 }
 .product-gallery::before {
   content: "";
@@ -7011,6 +7010,9 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
   z-index: 100;
   opacity: 1;
   visibility: visible;
+}
+.product-images{
+  height: 570px;
 }
 @media (min-width: 992px) {
   .product-gallery {
