--- a/style.css
+++ b/style.css
@@ -6972,7 +6972,7 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
   float: left;
   max-width: 100%;
 }
-.has-variation-swatches .product-images{
+.has-variation-swatches .product-gallery:not(.column-style):not(.grid-style) .product-images{
   height: 570px;
 }
 .product-images-container{
