fix issue style checkout page when validation error

--- a/style.css
+++ b/style.css
@@ -9662,7 +9662,7 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
 }
 .checkout-layout-3:not(.woobuilder-active) form.checkout .col-left .form-row:not(.field-readonly) label:not(.checkbox) {
   position: absolute;
-  top: 50%;
+  top: 26px;
   left: 12px;
   background: #fff;
   right: 12px;
@@ -9671,6 +9671,7 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
   pointer-events: none;
   transition: all 0.2s;
   line-height: 20px;
+  height: 30px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
