--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -187,7 +187,7 @@
 }
 
 .disabled-icon-add-cart-button {
-	.added_to_cart, .loop-add-to-cart-btn {
+	.added_to_cart, .loop-add-to-cart-btn, .loop-add-to-cart-on-image {
 		.woostify-svg-icon {
 			display: none;
 		}
