--- a/style.css
+++ b/style.css
@@ -6805,7 +6805,9 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
   padding: 25px 15px;
 }
 
-.disabled-icon-add-cart-button .added_to_cart .woostify-svg-icon, .disabled-icon-add-cart-button .loop-add-to-cart-btn .woostify-svg-icon {
+.disabled-icon-add-cart-button .added_to_cart .woostify-svg-icon, 
+.disabled-icon-add-cart-button .loop-add-to-cart-btn .woostify-svg-icon,
+.disabled-icon-add-cart-button .loop-add-to-cart-on-image .woostify-svg-icon {
   display: none;
 }
 
