--- a/style.css
+++ b/style.css
@@ -2820,6 +2820,12 @@ dd {
   direction: rtl;
 }
 
+.no-sidebar:not(.site-boxed-container) .alignfull:not(.is_wcb_container_child) {
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  max-width: 100vw;
+  width: 100vw;
+}
 .no-sidebar:not(.site-boxed-container) .alignwide {
   max-width: unset;
   width: unset;
